--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,25 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.flex-box-demo {
+  display: flex;
+}
+
+.left-side {
+  flex: 20%;
+  text-align: center;
+  background-color: #0B4F6C;
+}
+
+.middle {
+  flex: 50%;
+  text-align: center;
+  background-color: #D81E5B;
+}
+
+.right-side {
+  flex: auto;
+  text-align: center;
+  background-color: #59C9A5;
+}
