--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,87 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
+  background: #FFFFFF;
   font-family: sans-serif;
 }
 
-.flex-box-demo {
-  display: flex;
+.reveal {
+  width: 300px;
+  height: 300px;
+  margin: 50px auto;
 }
 
-.left-side {
-  flex: auto;
-  text-align: center;
-  background-color: #0B4F6C;
+.curve {
+  background: url(cat.png) 0px 150px, url(cat.png) 0px -225px, #f6d9ad;
+  background-repeat: no-repeat;
+  -webkit-transition: background-position 0.3s ease;
+  -moz-transition: background-position 0.3s ease;
+  -o-transition: background-position 0.3s ease;
+  -ms-transition: background-position 0.3s ease;
+  transition: background-position 0.3s ease;
 }
 
-.middle {
-  flex: auto;
+.curve:hover {
+  background: url(cat.png) 0px 210px, url(cat.png) 0px -285px, #f6d9ad;
+  background-repeat: no-repeat;
   text-align: center;
-  background-color: #D81E5B;
 }
 
-.right-side {
-  flex: auto;
+.plug {
+  background: url(cat.png) 0px 150px, url(cat.png) 0px -225px, #a79168;
+  background-repeat: no-repeat;
+  -webkit-transition: background-position 0.3s ease;
+  -moz-transition: background-position 0.3s ease;
+  -o-transition: background-position 0.3s ease;
+  -ms-transition: background-position 0.3s ease;
+  transition: background-position 0.3s ease;
+}
+
+.plug:hover {
+  background: url(cat.png) 0px 210px, url(cat.png) 0px -285px, #a79168;
+  background-repeat: no-repeat;
   text-align: center;
-  background-color: #59C9A5;
+}
+
+.paper {
+  background: url(cat.png) 0px 150px, url(cat.png) 0px -225px, #c9bfaa;
+  background-repeat: no-repeat;
+  -webkit-transition: background-position 0.3s ease;
+  -moz-transition: background-position 0.3s ease;
+  -o-transition: background-position 0.3s ease;
+  -ms-transition: background-position 0.3s ease;
+  transition: background-position 0.3s ease;
+}
+
+.paper:hover {
+  background: url(cat.png) 0px 210px, url(cat.png) 0px -285px, #c9bfaa;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.reveal a {
+  font: 45px/300px Helvetica, Arial, sans-serif;
+  text-align: center;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  opacity: 0;
+
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.reveal:hover a {
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
+  text-align: center;
+  opacity: 1;
+  cursor: pointer;
 }
