--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,22 @@
   padding: 0;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  background: #FFFFFF;
-  font-family: sans-serif;
+body, html {
+  height: 100%;
+}
+
+.parallax {
+    /* The image used */
+    background-image: url("cat.png");
+
+    /* Full height */
+    height: 100%;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .reveal {
