--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,16 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  animation: App-logo-spin 1 5s linear;
+  height: 100px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: white;
   text-align: center;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: black;
 }
 
 .App-intro {
