--- a/public/style.css
+++ b/public/style.css
@@ -25,13 +25,6 @@ body, html {
   background-size: cover;
 }
 
-.project-title a {
-  font: 40px/300px Helvetica, Arial, sans-serif;
-  color: rgb(228, 207, 207);
-  text-align: center;
-  text-decoration: none;
-}
-
 .reveal {
   width: 300px;
   height: 300px;
@@ -52,14 +45,16 @@ body, html {
 }
 
 .travelshare:hover {
-  background: url(./images/travelshare/travelshare.png) 300px 0px, url(./images/travelshare/travelshare.png) -300px 0px, #606060;
-  /*animation: fadeinout 10s linear;*/
+  background: url(./images/travelshare/travelshare.png) 300px 0px, url(./images/travelshare/travelshare.png) -300px 0px, url(./images/travelshare/travelshare-BW.png);
+  animation: fadeinout 10s linear;
   background-repeat: no-repeat;
   text-align: center;
+  text-decoration: none;
+  text-shadow: 0 0 10px blue;
 }
 
 .bear {
-  background: url(./images/catbottom.png) 0px 150px, url(./images/cattop.png) 0px 0px, #A0A0A0;
+  background: url(./images/catbottom.png) 0px 150px, url(./images/cattop.png) 0px -225px, #A0A0A0;
   background-repeat: no-repeat;
   -webkit-transition: background-position 0.3s ease;
   -moz-transition: background-position 0.3s ease;
@@ -70,14 +65,16 @@ body, html {
 }
 
 .bear:hover {
-  background: url(./images/catbottom.png) 0px 310px, url(./images/cattop.png) 0px -300px, url(./images/travelshare/travelshare.png);
+  background: url(./images/catbottom.png) -150px 0px, url(./images/cattop.png) 150px 0px, url(./images/travelshare/travelshare.png);
   animation: fadeinout 2s linear;
   background-repeat: no-repeat;
   text-align: center;
+  text-decoration: none;
+  text-shadow: 0 0 10px blue;
 }
 
 .wifi {
-  background: url(./images/cat.png) 0px 150px, url(./images/cat.png) 0px -225px, #D3D3D3;
+  background: url(./images/wifi/wifibottom.png) 0px 150px, url(./images/wifi/wifitop.png) 0px 0px, #D3D3D3;
   background-repeat: no-repeat;
   -webkit-transition: background-position 0.3s ease;
   -moz-transition: background-position 0.3s ease;
@@ -88,16 +85,18 @@ body, html {
 }
 
 .wifi:hover {
-  background: url(./images/travelshare/travelshare.png) -150px 0px, url(./images/travelshare/travelshare.png) 150px 0px, #D3D3D3;
+  background: url(./images/wifi/wifibottom.png) 0px 310px, url(./images/wifi/wifitop.png) 0px -300px, #D3D3D3;
   animation: fadeinout 2s linear;
   background-repeat: no-repeat;
   text-align: center;
+  text-decoration: none;
+  text-shadow: 0 0 10px blue;
 }
 
 .reveal a {
   font: 40px/300px Helvetica, Arial, sans-serif;
-  color: rgb(228, 207, 207);
   text-decoration: none;
+  color: rgb(228, 207, 207);
   -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   text-align: center;
   animation: fadeinout 2s linear;
@@ -116,6 +115,8 @@ body, html {
   animation: fadeinout 2s linear;
   filter: alpha(opacity=100);
   text-align: center;
+  text-decoration: none;
   opacity: 1;
   cursor: pointer;
+  color: green;
 }
