--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@
 
 }
 
+.social-media {
+  font-size: 30px;
+  color: inherit;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
