--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  /*background-color: rgb(228, 207, 207)*/
+  background-color: rgb(228, 207, 207)
 }
 
 .App-header {
